--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Help The Homeless Worldwide</title>
     
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" />
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="theme.css" rel="stylesheet" type="text/css" />
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
