--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <!-- App title -->
     <title>Help The Homeless Worldwide</title>
     
-    <link href="bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" />
-    <link href="theme.css" rel="stylesheet" type="text/css" />
+    <link href="Bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" />
+    <link href="Theme.css" rel="stylesheet" type="text/css" />
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
