--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- App favicon -->
-    <link rel="shortcut icon" href="images/hthlogo_small.png" />
+    <link rel="shortcut icon" href="/images/hthlogo_small.png" />
     <!-- App title -->
     <title>Help The Homeless Worldwide</title>
     
