--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="pull-right">
 					<a href="/">HOME</a>     
-                    <a href="partners">PARTNERS</a>     
+                    <a href="Partners.html">PARTNERS</a>     
                     <a href="/product-category/donate">DONATE TODAY</a>     
                     <!--<a href="/store">STORE</a>   -->
 					<a href="/events">NEWS & EVENTS</a>
