--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a class="bold"><img src="images/hthlogo_small.png"> <span>Help The Homeless Worldwide</span></a>
                 </div>
                 <div class="pull-right">
-					<a href="/">HOME</a>     
+					<a href="index.html">HOME</a>     
                     <a href="Partners.html">PARTNERS</a>     
                     <a href="/product-category/donate">DONATE TODAY</a>     
                     <!--<a href="/store">STORE</a>   -->
