--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <!--<a href="/store">STORE</a>   -->
 					<a href="/events">NEWS & EVENTS</a>
 					<a href="https://hthcoin.github.io/web">HTH COIN</a>
-                    <a href="about">ABOUT</a>
+                    <a href="About.html">ABOUT</a>
                 </div>
             </div>
         
