--- a/About.html
+++ b/About.html
@@ -153,7 +153,7 @@ var giveApiSettings = {"root":"https:\/\/helpthehomelessworldwide.org\/wp-json\/
                     <a href="/my-story">YOUR STORY</a>
 					<a href="/events">NEWS & EVENTS</a>
 					<a href="https://hthcoin.github.io/web">HTH COIN</a>
-                    <a href="/about">ABOUT</a>
+                    <a href="About.html">ABOUT</a>
                 </div>
             </div>
         
