--- a/Partners.html
+++ b/Partners.html
@@ -151,7 +151,7 @@ var giveApiSettings = {"root":"https:\/\/helpthehomelessworldwide.org\/wp-json\/
                     <a href="/product-category/donate">DONATE TODAY!</a>     
                     <!--<a href="/store">STORE</a>   -->
                     <a href="/my-story">YOUR STORY</a>
-					<a href="/events">NEWS & EVENTS</a>
+					<a href="Events.html">NEWS & EVENTS</a>
 					<a href="https://hthcoin.github.io/web">HTH COIN</a>
                     <a href="About.html">ABOUT</a>
                 </div>
