--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a href="Partners.html">PARTNERS</a>     
                     <a href="/product-category/donate">DONATE TODAY</a>     
                     <!--<a href="/store">STORE</a>   -->
-					<a href="/events">NEWS & EVENTS</a>
+					<a href="Events.html">NEWS & EVENTS</a>
 					<a href="https://hthcoin.github.io/web">HTH COIN</a>
                     <a href="About.html">ABOUT</a>
                 </div>
