--- a/About.html
+++ b/About.html
@@ -148,7 +148,7 @@ var giveApiSettings = {"root":"https:\/\/helpthehomelessworldwide.org\/wp-json\/
                 <div class="pull-right">
 					<a href="index.html">HOME</a>     
                     <a href="Partners.html">PARTNERS</a>     
-                    <a href="/product-category/donate">DONATE TODAY!</a>     
+                    <a href="Donate.html">DONATE TODAY!</a>     
                     <!--<a href="/store">STORE</a>   -->
                     <a href="/my-story">YOUR STORY</a>
 					<a href="Events.html">NEWS & EVENTS</a>
