--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="pull-right">
 					<a href="index.html">HOME</a>     
                     <a href="Partners.html">PARTNERS</a>     
-                    <a href="/product-category/donate">DONATE TODAY</a>     
+                    <a href="Donate.html">DONATE TODAY</a>     
                     <!--<a href="/store">STORE</a>   -->
 					<a href="Events.html">NEWS & EVENTS</a>
 					<a href="https://hthcoin.github.io/web">HTH COIN</a>
