--- a/Donate.html
+++ b/Donate.html
@@ -1,8 +1,23 @@
-<!--Header-->
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- App favicon -->
+    <link rel="shortcut icon" href="images/hthlogo_small.png" />
+    <!-- App title -->
+    <title>Help The Homeless Worldwide</title>
+    
+    <link href="Bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" />
+    <link href="Theme.css" rel="stylesheet" type="text/css" />
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 
+
+</head>
 
 <body>
     <div class="allcontainer">
