--- a/Donate.html
+++ b/Donate.html
@@ -19,22 +19,9 @@
 
 </head>
 
-<body>
-	<div class="donation-box">
-<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-<input type="hidden" name="cmd" value="_s-xclick" />
-<input type="hidden" name="hosted_button_id" value="YTMYPHKFNMZHY" />
-<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
-<img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
-</form>
 
 	
-<!--Call Content-->
-	    
-  
-</body>
-	
-	<!--Styles for Donations -->
+	<!--Styles for Donations 
 	
 	<style>
 	
@@ -54,7 +41,7 @@
 	-o-transition: all 0.15s ease-out;
 	transition: all 0.15s ease-out;
 }
-   <!-- Donation CSS -->
+    Donation CSS -->
     
 </div>
 <!--Page Content Closes-->
