--- a/Donate.html
+++ b/Donate.html
@@ -57,7 +57,7 @@
   
 </body>
 	
-	<!--Styles for Donations 
+	<!--Styles for Donations -->
 	
 	<style>
 	
@@ -77,7 +77,7 @@
 	-o-transition: all 0.15s ease-out;
 	transition: all 0.15s ease-out;
 }
-    Donation CSS -->
+   <-- Donation CSS -->
     
 <!--Page Content Closes-->
 <!--Footer-->
