--- a/Donate.html
+++ b/Donate.html
@@ -77,7 +77,9 @@
 	-o-transition: all 0.15s ease-out;
 	transition: all 0.15s ease-out;
 }
-   <-- Donation CSS -->
+		
+		
+   <!-- Donation CSS -->
     
 <!--Page Content Closes-->
 <!--Footer-->
