--- a/Donate.html
+++ b/Donate.html
@@ -15,10 +15,10 @@
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-	<link href="../src/css/cryptodonate.css" rel="stylesheet"/>
-        <link href="../src/css/cryptodonate.dark.css" rel="stylesheet"/>
-        <link href="../src/css/cryptodonate.pink.css" rel="stylesheet"/>
-        <link href="../src/css/cryptodonate.green.css" rel="stylesheet"/>
+	<link href="css/cryptodonate.css" rel="stylesheet"/>
+        <link href="css/cryptodonate.dark.css" rel="stylesheet"/>
+        <link href="css/cryptodonate.pink.css" rel="stylesheet"/>
+        <link href="css/cryptodonate.green.css" rel="stylesheet"/>
 
 </head>
     
